--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
   <title>Week 10 Assignment - GIS 5547</title>
-  <link rel="stylesheet" href="https://js.arcgis.com/4.24/esri/themes/light/main.css" />
-  <script src="https://js.arcgis.com/4.24/"></script>
+  <link rel="stylesheet" href="style.css" />
+  <script src="script.js"></script>
 </head>
 
 <body>
