--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
   <title>Week 10 Assignment - GIS 5547</title>
   <link rel="stylesheet" href="style.css" />
+  <script src="https://js.arcgis.com/4.24/"></script>
   <script src="script.js"></script>
 </head>
 
